fix: fixing css for button on iphone 4

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,7 +38,7 @@ input, select, .btn, .input-content, textarea {
     border: 1px solid #ccc;
     clear: both;
     width: 100%;
-    min-width: 288px;
+    min-width: 260px;
     display: block;
     font-size: 1.1em;
     -webkit-transition: all 0.1s ease-in-out;
